avformat/utils: fix memleak with nobuffer

Fixes Ticket2802

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>